# prompt-manager

./: README.md  deno.json  drizzle.config.ts  index.html  package.json  vite.config.ts
src/: bindings.ts  main.tsx  routeTree.gen.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  lib.rs  models.rs  vault.rs  vault_watcher.rs
src-tauri/src/db/: mod.rs  queries.rs
src/components/: TitleBar.tsx
src/components/prompts/: PromptCard.tsx  PromptEditOverlay.tsx  PromptEditor.tsx  PromptList.tsx  PromptTemplateFields.tsx
src/components/sidebar/: Sidebar.tsx  SidebarFooter.tsx  SidebarLibrary.tsx  SidebarViews.tsx
src/components/snippets/: SnippetCard.tsx  SnippetEditOverlay.tsx  SnippetList.tsx
src/components/tags/: SuggestionsDropdown.tsx  TagInput.tsx  TagPill.tsx
src/components/ui/: CommandPalette.css  CommandPalette.tsx  MainControls.tsx  Panel.tsx  ToastProvider.tsx  ViewControls.tsx
src/contexts/: ConsoleErrorContext.tsx  PromptManagerContext.tsx  SidebarContext.tsx  ThemeContext.tsx  ViewConfigContext.tsx  ViewHeaderContext.tsx
src/db/: client.ts  schema.ts
src/db/migrations/: 0000_third_toro.sql
src/db/migrations/meta/: 0000_snapshot.json  (+1 more)
src/hooks/: useDropdownPosition.ts  useOverlayState.ts  usePromptEditForm.ts  usePromptFiltering.ts  useTagInput.ts  useViewManagement.ts
src/routes/: __root.tsx  debug.tsx  index.tsx  main_view.tsx  settings.tsx
src/schemas/: schemas.ts
src/services/: PromptManagerService.ts
src/utils/: templateUtils.ts  viewUtils.ts
